Table br div span style attribute for styling

--- a/practice.html
+++ b/practice.html
@@ -29,6 +29,12 @@
         <option value="FL">  Florida  </option>
         <option value="CA">  California  </option>
         <option value="TX">  Texas  </option>
+        <option value="MD">  Maryland  </option>
+        <option value="DC">  Washington DC  </option>
+
+        
+
+
 
     </select>
 
